<resources>
    <string name="app_name">My Movie App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_movie">Edit Movie Act</string>
    <string name="title_activity_search">Search Act</string>
    <string name="movie_list_item__textTitle">Title</string>
    <string name="movie_list_item_textLength">length</string>
    <string name="activity_edit_movie_editTitle">Title</string>
    <string name="activity_edit_movie_editPlot">Plot Summary</string>
    <string name="activity_edit_movie_picUrlEdit">Poster URL</string>
    <string name="activity_edit_movie_btnShow">See Poster</string>
    <string name="activity_edit_movie_btnDownload">Download Movie Poster</string>
    <string name="activity_edit_movie_yearEdit">Year</string>
    <string name="activity_edit_movie_watched_check">Watched</string>
    <string name="activity_edit_movie_lengthEdit">Length</string>
    <string name="activity_edit_movie_btnCancle">cancel</string>
    <string name="activity_edit_movie_btnShare">share</string>
    <string name="activity_edit_movie_btnOK">save</string>
    <string name="activity_main_btnAdd">add movie</string>
    <string name="activity_search_editSearch">Enter search</string>
    <string name="activity_search_btnGo">Go</string>
    <string name="activity_search_btnCancel">Cancel</string>
    <string name="movie_list_item__textWatched">New Text</string>
    <string name="MainActivity_dialog.setTitle">Add a Movie</string>
    <string name="MainActivity_dialog_setMessage">Would you like to edit movie info manually or extract it from the web?</string>
    <string name="MainActivity_dialog_btnP">web</string>
    <string name="MainActivity_dialog_btnN">manual</string>
    <string name="MainActivity_deleteDialogTitle">DELETE/EDIT</string>
    <string name="MainActivity_deleteDialogMessage">Would you like to edit or delete this movie entry?</string>
    <string name="MainActivity_deleteDialog_btnP">Edit</string>
    <string name="MainActivity_deleteDialog_btnN">Delete</string>
    <string name="MainActivity_delAllDialog_title">Are you sure?</string>
    <string name="MainActivity_delAllDialog_msg">This action will delete all records</string>
    <string name="MainActivity_delAllDialog_btnP">Delete</string>
    <string name="MainActivity_delAllDialog_btnN">Cancel</string>
    <string name="EditMovieAct_ToastTitle">Title required!</string>
    <string name="EditMovieAct_ToastImage">Image url field is empty or incorrect</string>
    <string name="EditMovieAct_ToastNoData">No data :(</string>
    <string name="EditMovieAct_ToastProb">Problem downloading image. Try again later</string>
    <string name="EditMovieAct_loadImgDialog_msg">Loading...</string>
    <string name="EditMovieAct_fillDialog_title">Getting data</string>
    <string name="EditMovieAct_fillDialog_msg">Please wait...</string>
    <string name="menu_main_delAllItem">Delete all items</string>
    <string name="menu_main_filter">Filter</string>
    <string name="menu_main_watched">watched</string>
    <string name="menu_main_not_watched">not watched</string>
    <string name="menu_main__show_all">Show all movies</string>
    <string name="menu_main_exit">Exit</string>
    <string name="menu_main_lang">Heb/Eng</string>
    <string name="manifest_app_name">My movies</string>
    <string name="manifest_title_main">My movies</string>
    <string name="manifest_title_edit_act">Edit movie entry</string>
    <string name="manifest_title_search_act">Search movie</string>
    <string name="search_act_loding_dialog_title">Loading movies</string>
    <string name="search_act_loding_dialog_msg">Please wait...</string>
    <string name="search_act_no_movie_toast">No results, try a different key word</string>
    <string name="search_act_no_keyword_toast">You didn\'t enter any search...</string>
    <string name="activity_main_welcomeText">Welcome to your\n home\n movies\n library!</string>

</resources>
