<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/listbg"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/smallPosterImg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="#010101"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_list_item__textTitle"
            android:id="@+id/textTitle"
            android:layout_marginTop="10dp"
            android:textColor="#ff408040"

            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_list_item_textLength"
                android:id="@+id/textLength"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_list_item__textWatched"
                android:id="@+id/textWatched"


                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="watched" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>